--- a/index.css
+++ b/index.css
@@ -6,18 +6,18 @@
 	font-family: "Poppins",
 	sans-serif; 
 	font-size: 20px;
-	color: #444;
+	color: #2B2D42;
 	text-align: center;
 	line-height: 1.5;
-  }
+	margin:0em;
+	}
+	/* moved this into main so nav and foooter stretch to the edges */
+	main{
+		margin:8px;
+	}
 	
 	/* ////////////////////nav styling/////////////////// */
 	
-	nav,
-  footer {
-	padding: 1% 0;
-  }
-  
   nav {
 	top: 0;
 	left: 0;
@@ -28,13 +28,22 @@
 	.nav-links{
 		list-style-type: none;
 		text-align: right;
-		padding-right: 10px;;
+		padding-right: 10px;
+	}
+	
+	.nav-live-link{ 
+		text-decoration: none;
+	}
+
+	footer{
+		background: rgb(211, 177, 211);
 	}
 	
 	/* //////////////////////section styling//////////////// */
 	
 	header {
 	padding: 12% 0;
+	/* border: solid 1px purple; */
 	}
 
 	.hello-world{
@@ -54,7 +63,11 @@
 	/* ////////////////Project Styling ////////////// */
 	
 	.project{
-		border: solid blue 1px;
+		/* border: solid blue 1px; */
+	}
+
+	.giftex-img, .eventGuide-img, .flashQuiz-img{
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
 	}
 
 	.languages{
@@ -62,7 +75,7 @@
 	}
 
 	.live-site-link, .github-link{
-		border: dashed teal 1px;
+		/* border: dashed teal 1px; */
 		padding: .5em;
 		text-align: center;
 		text-decoration: none;
@@ -74,6 +87,16 @@
 	@media only screen and (min-width: 320px) {
 		nav{
 			position: absolute;
+			/* border: solid 1px blue; */
+		}
+		.nav-links{
+			text-align: left;
+			padding-inline-start: 1em;
+		}
+		.link{
+			display: inline;
+			float: left;
+			width: 33.33%; 
 		}
 
 		section {
@@ -84,20 +107,8 @@
 			width: 100%;
 		}
 	
-		/* .intro {
-			font-size: 36px;
-		}*/
-	
 		.language {
 			text-align: left;
 			margin-inline-start: 4em;
 		}
-	/*
-		.profile-img {
-			width: 260px;
-		}
-	
-		.bio, .capstone {
-			padding-bottom: 100px;
-		} */
 	}
