--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@
 	sans-serif; 
 	font-size: 20px;
 	color: #2B2D42;
+	background: #f5f5f5;
 	text-align: center;
 	line-height: 1.5;
 	margin:0em;
@@ -26,6 +27,8 @@
 		z-index: 10;
 		background: black;
 		padding-bottom: .5em;
+		position: fixed;
+		border-bottom: mediumvioletred 4px solid;
 	}
 	
 	.nav-links:focus{
@@ -58,7 +61,12 @@
 
 	.hello-world{
 		/* border: solid blue 1px; */
-		margin-top:3em;
+		margin-top:0em;
+		font-size: 3em;
+		text-shadow: 6px 4px #d3dedc;
+	}
+	.whatIdo{
+		font-size:2em;
 	}
 
 	.profilePic{
@@ -79,13 +87,10 @@
 
 	/* ////////////////Project Styling ////////////// */
 
-
-	.giftex-img, .flashQuiz-img{
-		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-		border-radius: 1em;
+	.language-container{
+		background:#1ecdc30d;
 	}
-
-	.languages{
+	.language{
 		list-style-type: none;
 	}
 
@@ -97,6 +102,9 @@
 		margin-left: .2em;
 		border-radius: 1em;
 		color: rgb(117, 11, 117);
+	}
+	.projBtn:visited, .resume-btn:visited{
+		color: mediumvioletred
 	}
 
 	.projBtn:hover, .resume-btn:hover{
@@ -118,6 +126,8 @@
 	}
 	.laptop{
 		width: 75%;
+		min-height: 200px;
+		min-width: 333px
 	}
 	
 		/* ////////////////Media queries ////////////// */
@@ -128,10 +138,6 @@
 	}
 
 	@media only screen and (min-width: 320px) {
-		nav{
-			position: absolute;
-			/* border: solid 1px blue; */
-		}
 		.nav-links{
 			list-style-type: none;
 
@@ -196,10 +202,6 @@
 	}
 
 	@media only screen and (min-width: 800px){
-		.hello-world{
-			margin-top: .8em;
-			font-size: 2.5em;
-		}
 
 		header{
 			padding-top: 5em;
